--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,25 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  margin-top: 30px;
+  margin-left: 30px;
+
+}
+
+.field {
+  border: 1px solid grey;
+  padding: 10px;
+}
+
+.field:not(:last-child) {
+  margin-right: 30px;
+}
+
+#datetime-picker{
+  margin-left: 30px;
+  height: 30px;
+  border: 1px solid grey;
+}
